# Youtube_Downloader

./: DISTRIBUTION.md  README-new.md  README.md  YouTube-Downloader.spec  main.py  pyproject.toml  run.bat
extension/: README.md  background-simple.js  background-ytdl.js  background.js  content.js  debug.html  manifest-simple.json  manifest-ytdl.json  manifest.json  popup-ytdl.html  popup-ytdl.js  popup.css  popup.html  popup.js
