[project]
name = "yt-downloader-gui"
version = "0.1.0"
description = "YouTube Downloader GUI Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "yt-dlp>=2023.10.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []